welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: not found: value d
var sum3= c+d
            ^blueTicket:7: error: value || is not a member of Int
if (sum1=10 || sum2=10 || sum3=10) return 10;  
            ^blueTicket:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (sum1=10 || sum2=10 || sum3=10) return 10;  
        ^blueTicket:8: error: value || is not a member of Int
if (sum1=sum2+10 ||sum1=sum3+10) return 5;
                 ^blueTicket:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (sum1=sum2+10 ||sum1=sum3+10) return 5;
        ^